--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
   <div class="logo">SIRIUS REPAIR HUB</div>
   <nav>
     <ul class="nav-links">
-      <li><a href="#home"></a> <a href="INDEX.html">Home</a></li>
+      <li><a href="#home"></a> <a href="index.html">Home</a></li>
       <li><a href="#about"></a> <a href="aboutus.html">About</a>
         
  </li>
